--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,19 @@
 from = {format = "poetry", path = "pyproject.toml"}
 to = {format = "setuppy", path = "setup.py"}
 
+[tool.dephell.flake8]
+from = {format = "pip", path = "requirements-flake.txt"}
+command = "flake8"
+
+[tool.dephell.typing]
+from = {format = "poetry", path = "pyproject.toml"}
+command = "mypy --ignore-missing-imports --allow-redefinition dephell_specifier"
+
+[tool.dephell.pytest]
+from = {format = "poetry", path = "pyproject.toml"}
+tests = ["tests", "README.md"]
+command = "pytest -x tests/"
+
 [tool.poetry]
 name = "dephell_markers"
 version = "0.1.1"
