--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ from = {format = "poetry", path = "pyproject.toml"}
 to = {format = "setuppy", path = "setup.py"}
 
 [tool.poetry]
-name = "dephell_markers"
-version = "0.1.2"
+name = "dephell_specifier"
+version = "0.1.3"
 authors = ["orsinium"]
 description = "Work with version specifiers."
 readme = "README.md"
