--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,29 +3,20 @@ from = {format = "poetry", path = "pyproject.toml"}
 to = {format = "setuppy", path = "setup.py"}
 tag = "v."
 
-[tool.dephell.flake8]
-from = {format = "pip", path = "requirements-flake.txt"}
-command = "flake8"
+[build-system]
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
 
-[tool.dephell.typing]
-from = {format = "poetry", path = "pyproject.toml"}
-command = "mypy --ignore-missing-imports --allow-redefinition dephell_specifier"
-
-[tool.dephell.pytest]
-from = {format = "poetry", path = "pyproject.toml"}
-tests = ["tests", "README.md"]
-command = "pytest -x tests/"
-
-[tool.poetry]
-name = "dephell_specifier"
-version = "0.2.2"
-authors = ["Gram <mail@orsinium.dev>"]
-description = "Work with version specifiers."
+[project]
+name = "dephell-specifier"
+authors = [
+    {name = "Gram", email = "git@orsinium.dev"},
+]
+license = {file = "LICENSE"}
 readme = "README.md"
-license = "MIT"
-repository = "https://github.com/dephell/dephell_venvs"
+requires-python = ">=3.7"
+dynamic = ["version", "description"]
 keywords = ["dephell", "packaging", "versioning", "semver", "version", "maven"]
-# https://pypi.org/classifiers/
 classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Console",
@@ -46,7 +37,19 @@ classifiers = [
     "Operating System :: Microsoft :: Windows",
     "Operating System :: Unix",
 ]
+dependencies = ["packaging"]
 
-[tool.poetry.dependencies]
-python = ">=3.6"
-packaging = ">=17.1"
+[project.optional-dependencies]
+test = [
+    "pytest",
+]
+lint = [
+    "flake8",
+    "flake8-bugbear",
+    "isort",
+    "mypy",
+    "unify",
+]
+
+[tool.flit.module]
+name = "dephell_specifier"
