better mypy config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,11 +61,11 @@ ignore_missing_imports = true
 allow_redefinition = true
 # follow_imports = "silent"
 show_error_codes = true
-check_untyped_defs = false
-# no_implicit_optional = true
-# strict_equality = true
-# warn_redundant_casts = true
-# warn_unused_ignores = true
+check_untyped_defs = true
+no_implicit_optional = true
+strict_equality = true
+warn_redundant_casts = true
+warn_unused_ignores = true
 
 [tool.isort]
 profile = "django"
